--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,5 +1,6 @@
 *{
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 .content{
     padding: 1rem;
@@ -12,10 +13,15 @@ ol.pokemons{
     grid-template-columns: 1fr 1fr;
 }
 ol.pokemons li{
+    display: flex;
+    flex-direction: column;
     margin: .5rem;
     padding: 1rem;
     background-color: #14A06F;
     color: #fff;
     border-radius: 1rem;
-    height: 120px;
+}
+ol.pokemons li img{
+    max-width: 100%;
+    height: 100px;
 }
